--- a/Client/Altera/package.json
+++ b/Client/Altera/package.json
@@ -14,12 +14,14 @@
     "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.12",
-    "pdfjs-dist": "^4.8.69",
+    "pdfjs-dist": "^3.0.279",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1"
   },
