--- a/Client/Altera/package.json
+++ b/Client/Altera/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.12",
     "pdfjs-dist": "^3.0.279",
     "react": "^18.3.1",
